changing to virtual threads scenario12